[gd_scene load_steps=2 format=3 uid="uid://ckye67jiq6lhr"]

[ext_resource type="Script" path="res://EnemySpawner.gd" id="1_c1p7x"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_c1p7x")

[node name="SpawnTime" type="Timer" parent="."]

[node name="WaveTime" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="SpawnTime" to="." method="_on_spawn_time_timeout"]
